# image_ranking

./: .gitignore  README.md  dvc.yaml  hello.py  justfile  params.yaml  pyproject.toml
.dvc/: config
apps/api/: .gitignore  justfile  pyproject.toml
apps/api/src/api/: api.py  detector.py  models.py  onnx_model.py  routes.py  service.py  utils.py
apps/evaluate/: pyproject.toml
apps/evaluate/src/evaluate/: __init__.py  __main__.py
apps/export/: pyproject.toml
apps/export/src/export/: __init__.py  __main__.py
apps/featurize/: justfile  pyproject.toml
apps/featurize/src/featurize/: __init__.py  __main__.py
apps/frontend/: justfile  pyproject.toml
apps/frontend/src/frontend/: api.py  main_page.py  page_2.py  streamlit_app.py
apps/image_analyzer/: README.md  justfile  pyproject.toml
apps/image_analyzer/src/image_analyzer/: main_page.py
apps/image_ranking_model/: justfile  pyproject.toml
apps/image_ranking_model/src/image_ranking_model/: __init__.py  __main__.py  api.py  convert.py  encode.py  ranking.py
apps/prepare/: README.md  justfile  pyproject.toml
apps/prepare/src/prepare/: __init__.py  __main__.py  cli.py  logging_utils.py  utils.py  workflow.py
apps/prepare/src/prepare/processes/: blur.py  crop.py  face.py
apps/train/: pyproject.toml
apps/train/src/train/: __init__.py  models.py  train.py
data/: raw.dvc
data/features/: .gitignore
data/prepared/lower_body/: .gitignore
data/raw/: evaluate.dvc  train.dvc
exported_models/: .gitignore
libs/common-utils/: pyproject.toml
libs/common-utils/src/common_utils/: __init__.py
libs/crop_image/: .gitignore  README.md  justfile  pyproject.toml
libs/crop_image/src/crop_image/: __init__.py  __main__.py  constants.py  core.py  debug.py  models.py  pipeline.py  utils.py
libs/crop_image/src/crop_image/processes/: blur.py  crop.py  face.py  glasses.py  split.py
libs/crop_image/tests/crop_image/: test_pipeline.py
libs/crop_image/tests/crop_image/test_pipeline/: chatgpt_man_running_base64.txt
libs/data-schemas/: pyproject.toml
libs/data-schemas/src/data_schemas/: __init__.py
