[project]
name = "image-ranking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.59.2",
]

[tool.uv.workspace]
members = [
    "apps/*",
    "libs/*"
]

[[tool.mypy.overrides]]
module = ["ultralytics.*", "torchvision.*", "onnxruntime.*", "dlib.*"]
ignore_missing_imports = true
