[project]
name = "export"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Þorgeir Eyfjörð Sigurðsson", email = "thorgeirsigurd@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "onnx>=1.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
