[project]
name = "featurize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Þorgeir Eyfjörð Sigurðsson", email = "thorgeirsigurd@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "polars>=1.30.0",
    "types-tqdm>=4.67.0.20250516",
]

[project.scripts]
featurize = "featurize:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
