[project]
name = "prepare"
version = "0.1.0"
description = "Crop lower and upper body from persons from images."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crop-image==0.1.0",
    "opencv-python>=4.11.0.86",
    "structlog>=25.4.0",
    "typer>=0.16.0",
    "ultralytics>=8.3.148",
]

[[tool.mypy.overrides]]
module = ["ultralytics.*"]
ignore_missing_imports = true

[tool.uv.sources]
crop-image = { workspace = true }

[project.scripts]
crop-person = "crop_person:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.12",
]
