[project]
name = "crop-image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Þorgeir Eyfjörð Sigurðsson", email = "thorgeirsigurd@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.11.0.86",
    "ultralytics>=8.3.150",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
